[package]
name = "read-progress"
version = "0.1.0"
authors = ["Rory McCann <rory@technomancy.org>"]
edition = "2018"
repository = "https://git.sr.ht/~ebel/read-progress-rs"
license = "AGPL-3.0+"
description = "A rust library wrapping a `Read` in something that records how many bytes have been read"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
